added moredoc on index.html

--- a/html_css/index.html
+++ b/html_css/index.html
@@ -19,5 +19,7 @@
         <img src="images/Adeniyi Pics.jpg" alt="Adeniyi">
         <p>@gurdzilla</p>
         <p>I love to learn html</p>
+        <h1>This is a simple heading</h1>
+       
     </body>
 </html>
