Update heading and paragraph of index.html

--- a/html_css/index.html
+++ b/html_css/index.html
@@ -20,6 +20,8 @@
         <p>@gurdzilla</p>
         <p>I love to learn html</p>
         <h1>This is a simple heading</h1>
+        <p>This is a moe paragraph added </p>
+        <h1>This is more heading added</h1>
        
     </body>
 </html>
