--- a/html_css/index.html
+++ b/html_css/index.html
@@ -20,6 +20,7 @@
         <p>@gurdzilla</p>
         <p>I love to learn html</p>
         <h1>This is a simple heading</h1>
+        <p>This is another newly added paragraph</p>
        
     </body>
 </html>
