--- a/html_css/index.html
+++ b/html_css/index.html
@@ -18,6 +18,6 @@
     <body>
         <img src="images/Adeniyi Pics.jpg" alt="Adeniyi">
         <p>@gurdzilla</p>
-        <p>I love to learn html</p>
+        <p>First paragraph</p>
     </body>
 </html>
